--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
 
 [project.optional-dependencies]
 langgraph = ["langgraph>=0.2.0"]
-dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]
+dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0", "pre-commit>=3.0.0"]
 llm = ["httpx>=0.25.0", "langgraph>=0.2.0"]
 
 [project.urls]
