docs: update docs for parse_json wrapper stripping, fix CI demo path
- Update README parse_json description and add wrapper example
- Add missing input_param to @guard docs in README and AGENTS.md
- Fix retryable error types in AGENTS.md (only ParseError, JSONDecodeError)
- Update test_utils.py description in AGENTS.md
- Fix CI demo path from examples/demo/demo.py to actual module paths
- Add Step 9 (update-docs) to implement-feature skill

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,10 @@ jobs:
       - name: Run tests
         run: pytest tests/ -v
 
-      - name: Run demo (no LLM)
-        run: python examples/demo/demo.py
+      - name: Run demos (no LLM)
+        run: |
+          python -m examples.llm_demo.run_demo
+          python -m examples.rag_demo.run_demo
 
   lint:
     runs-on: ubuntu-latest
