--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "pydantic>=2.0.0",
+    "pydantic>=2.0.0,<3",
     "json-repair>=0.55.0",
 ]
 
